--- a/_includes/scss/type.scss
+++ b/_includes/scss/type.scss
@@ -117,8 +117,10 @@ p {
     box-shadow: inset 0 -.26em 0 0 $bright-blue;
     transition: 300ms ease-in-out;
     color: inherit;
-    &:hover {
-      box-shadow: inset 0 -1.618em 0 0 $bright-blue;
+    @media #{$desktop-sm}, #{$desktop}, #{$desktop-xl} {
+      &:hover {
+        box-shadow: inset 0 -1.618em 0 0 $bright-blue;
+      }  
     }
   }
 }
